add function create public quitPlan by admin, and fix logic checkSubscription Access
